--- a/css/main.css
+++ b/css/main.css
@@ -389,8 +389,8 @@ table {
 
 th,
 td {
-  padding: 1.5rem 3rem;
-  text-align: left;
+  padding: 0 3rem;
+  text-align: center;
 }
 
 th {
@@ -399,7 +399,7 @@ th {
 }
 
 td {
-  line-height: 1.5;
+  line-height: 0.5;
 }
 
 th:first-child,
@@ -679,21 +679,22 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  font-family: "montserrat-bold", sans-serif;
-  font-size: 1.4rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: .3rem;
-  height: 5.4rem;
-  line-height: 5.4rem;
-  padding: 0;
-  margin: 0 .3rem 1.2rem 0;
-  background: #A5A5A5;
+  height: 3rem;
+  line-height: 3rem;
+  padding: 0 0.5rem;
+  margin: 1rem auto;
+  background: cyan;
   color: #222222;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
   white-space: nowrap;
   border: none;
+  border-radius: 10px;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
